Saves rates to the database and reads from it.